Fixed alignment of images using grid layout

--- a/src/components/Home/caraousel/gallery/Gallery.module.scss
+++ b/src/components/Home/caraousel/gallery/Gallery.module.scss
@@ -1,41 +1,43 @@
 $container-width: 1250px;
 $container-height: 450px;
 
-$column-1-width: 487px;
+$column-1-width: auto;
 $column-1-height: 450px;
 
-$column-2-3-width: 244px;
+$column-2-3-width: auto;
 $column-2-3-height: 218px;
 
-$column-4-width: 487px;
+$column-4-width: auto;
 $column-4-height: 450px;
 
 .container {
     width: $container-width;
     height: $container-height;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
 
     .gallery {
-        display: flex;
+        display: grid;
+        grid-template-columns: $column-1-width auto $column-2-3-width auto $column-4-width;
+        grid-auto-flow: row;
         gap: 1rem;
         transition: transform 0.5s ease-in-out;
     }
 
     .column-1 {
-        flex: 0 0 $column-1-width;
         height: $column-1-height;
+        grid-area: 1 / 1 / 3 / 3;
     }
 
     .column-2,
     .column-3 {
-        flex: 0 0 $column-2-3-width;
         height: $column-2-3-height;
+        flex-wrap: wrap;
     }
 
     .column-4 {
-        flex: 0 0 $column-4-width;
         height: $column-4-height;
+        grid-area: 1 / 4 / 3 / 6;
     }
 
     .image {
